--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ div.column a:visited { text-decoration: underline; color: green }
 
 <div class="row">
   <div class="column2">
-<img style="display:block;" width="100%" src="https://meera-krishnamoorthy.github.io/me.png" alt="headshot">
+<img style="display:block;" width="100%" src="https://meerakulous.github.io/me.png" alt="headshot">
 <br>
 Fun fact: This is me backpacking in Wellington, New Zealand! 
 <br>
@@ -68,7 +68,7 @@ Fun fact: This is me backpacking in Wellington, New Zealand!
         	<li> mathematical modeling of populations facing extinction at Stanford with <a href="https://popstudies.stanford.edu/">Professor Shripad Tuljapurkar</a> </li>
 	</ul>
      </p>
-<p style= font-size:18px; line-height:35px; "> Here is my <a href="https://meera-krishnamoorthy.github.io/MeeraKrishnamoorthyCV.pdf">CV</a>. </p>
+<p style= font-size:18px; line-height:35px; "> Here is my <a href="https://meerakulous.github.io/MeeraKrishnamoorthyCV.pdf">CV</a>. </p>
 <p>
 <hr>
 
