--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@ Fun fact: This is me backpacking in Wellington, New Zealand!
 <p style= font-size:18px; line-height:35px; "> Here is my <a href="https://meerakulous.github.io/MeeraKrishnamoorthyCV.pdf">CV</a>. </p>
 <p>
 <hr>
+	  
+<p style="font-size:22px;font-weight:900;">News</p>
+<ul>
+        <li> <a href "https://cse.engin.umich.edu/stories/precision-health-in-the-palm-of-your-hand"> Precision health in the palm of your hand </a> </li>
+        <br>
+</ul>
+<p>
+<hr>
 
 <p style="font-size:22px;font-weight:900;">Publications</p>
 <ul>
