--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@ Fun fact: This is me backpacking in Wellington, New Zealand!
 	  
 <p style="font-size:22px;font-weight:900;">News</p>
 <ul>
-        <li> <a href "https://cse.engin.umich.edu/stories/precision-health-in-the-palm-of-your-hand"> Precision health in the palm of your hand </a> </li>
-        <br>
+        <li> <a href="https://cse.engin.umich.edu/stories/precision-health-in-the-palm-of-your-hand"> Precision health in the palm of your hand </a> </li>
 </ul>
 <p>
 <hr>
