--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Fun fact: This is me backpacking in Wellington, New Zealand!
 <p>
 <hr>
 <p style="font-size:22px;font-weight:900;">About Me</p>
-    <p style= font-size:18px; line-height:35px; "> I am a second year Ph.D. student in <a href="https://cse.umich.edu/">Computer Science</a> at the University of Michigan. I work with <a href="http://www-personal.umich.edu/~wiensj/">Professor Jenna Wiens</a> on using domain knowledge to adapt current and create novel machine learning techniques to analyze and classify genomic data. Part of my work is funded by a <a href="https://stemfellowships.org/">Graduate Fellowship for STEM Diversity</a>. <br> <br>I received my bachelor's degree from Caltech (major: <a href="http://ee.caltech.edu/">EE</a>, minor: <a href="http://cms.caltech.edu/">CS</a>). <br> <br> My previous experience includes
+    <p style= font-size:18px; line-height:35px; "> I am a third year Ph.D. student in <a href="https://cse.umich.edu/">Computer Science</a> at the University of Michigan. I work with <a href="http://www-personal.umich.edu/~wiensj/">Professor Jenna Wiens</a> on using domain knowledge to adapt current and create novel machine learning techniques to analyze and classify genomic data. Part of my work is funded by a <a href="https://stemfellowships.org/">Graduate Fellowship for STEM Diversity</a>. <br> <br>I received my bachelor's degree from Caltech (major: <a href="http://ee.caltech.edu/">EE</a>, minor: <a href="http://cms.caltech.edu/">CS</a>). <br> <br> My previous experience includes
 	<ul>
         	<li> machine learning/autonomous systems control research at <a href="http://cast.caltech.edu">Caltech's CAST (Center for Autonomous Systems and Technology)</a> with <a href="http://www.yisongyue.com/">Professor Yisong Yue</a> </li>
         	<li> software development and social network analysis at <a href="https://rocketship.vc">Rocketship.vc</a>  </li>
@@ -95,5 +95,6 @@ meera (at) alumni (dot) caltech (dot) edu
 
 </body>
 </html>
+
 
 
