--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ div.column a:visited { text-decoration: underline; color: green }
 	  
 <p style="font-size:22px;font-weight:900;">News</p>
 <ul>
+	<li> <b>March 202, 2024</b>: Our <a href="https://rdcu.be/dB7a4">comment</a> on the off-label use of AI models in healthcare was published in  <a href="https://www.nature.com/nm/"><i>Nature Medicine</i></a>.
         <li> <b>June 9, 2022</b>: Our <a href="https://doi.org/10.1038/s42003-022-03498-3">paper</a> presenting AMAISE (<b>A</b> <b>M</b>achine learning <b>A</b>pproach to <b>I</b>ndex-free <b>S</b>equence <b>E</b>nrichment) was published in <a href="https://www.nature.com/commsbio/"><i>Nature Communications Biology</i></a> (<a href="https://bioengineeringcommunity.nature.com/posts/the-story-behind-amaise-a-machine-learning-approach-to-index-free-sequence-enrichment">related blog post</a>, <a href="https://cse.engin.umich.edu/stories/precision-health-in-the-palm-of-your-hand">related article</a>).
 </ul>
 <p>
@@ -80,6 +81,7 @@ div.column a:visited { text-decoration: underline; color: green }
 
 <p style="font-size:22px;font-weight:900;">Publications</p>
 <ul>
+	<li> <b> Meera Krishnamoorthy</b>, Michael W. Sjoding, Jenna Wiens. <br> <b> Off-label use of artificial intelligence models in healthcare</b> <br> Comment, Nature Medicine (2024) <a href="https://rdcu.be/dB7a4"></a>[Article]</li><br>
         <li> <b>Meera Krishnamoorthy</b>, Piyush Ranjan, John R. Erb-Downward, Robert P. Dickson, Jenna Wiens. <br> <b>AMAISE: a machine learning approach to index-free sequence enrichment</b> <br> Journal Paper, Nature Communications Biology <b>5</b>, 568 (2022) <br> <a href="https://doi.org/10.1038/s42003-022-03498-3">[Article]</a> <a href="https://www.nature.com/articles/s42003-022-03498-3.pdf">[PDF]</a> <a href="https://bioengineeringcommunity.nature.com/posts/the-story-behind-amaise-a-machine-learning-approach-to-index-free-sequence-enrichment">[Blog Post]</a></li> <br>
         <li> Andrew J. Taylor, Victor D. Dorobantu, <b> Meera Krishnamoorthy </b>, Hoang M. Le, Yisong Yue, Aaron D. Ames. <br> <b> A Control Lyapunov Perspective on Episodic Learning via Projection to State Stability </b> <br> Conference Paper, IEEE Conference on Decision and Control (2019) <br> <a href="https://arxiv.org/abs/1903.07214">[PDF]</a></li>
         <br>
