--- a/index.html
+++ b/index.html
@@ -59,14 +59,7 @@ div.column a:visited { text-decoration: underline; color: green }
 <p>
 <hr>
 <p style="font-size:22px;font-weight:900;">About Me</p>
-    <p style= font-size:18px; line-height:35px; "> I am a fifth year Ph.D. student in <a href="https://cse.umich.edu/">Computer Science</a> at the University of Michigan. I work with <a href="http://www-personal.umich.edu/~wiensj/">Professor Jenna Wiens</a> on developing novel machine learning techniques to classify healthcare data. Part of my work is funded by a <a href="https://stemfellowships.org/">Graduate Fellowship for STEM Diversity</a>. <br> <br>I received my bachelor's degree from Caltech (major: <a href="http://ee.caltech.edu/">EE</a>, minor: <a href="http://cms.caltech.edu/">CS</a>). <br> <br> In the past, I have developed computational tools for multiple domains, including <a href="https://arxiv.org/abs/1903.07214">autonomous systems control</a>, <a href="https://www.sciencedirect.com/science/article/abs/pii/S0019103522004961">astronomy</a>, and <a href="https://eco.confex.com/eco/2015/webprogram/Paper56171.html">population studies</a>. <br>
-
-	<ul>
-        	<li> machine learning/autonomous systems control research at Caltech's CAST (Center for Autonomous Systems and Technology)</a> with <a href="http://www.yisongyue.com/">Professor Yisong Yue</a> </li>
-        	<li> software development and social network analysis at <a href="https://rocketship.vc">Rocketship.vc</a>  </li>
-        	<li> spectral analysis of images of Jupiter at NASA Jet Propulsion Laboratory with <a href="https://science.jpl.nasa.gov/people/Orton/">Dr. Glenn Orton</a> </li>
-        	<li> mathematical modeling of populations facing extinction at Stanford with <a href="https://popstudies.stanford.edu/">Professor Shripad Tuljapurkar</a> </li>
-	</ul>
+    <p style= font-size:18px; line-height:35px; "> I am a fifth year Ph.D. student in <a href="https://cse.umich.edu/">Computer Science</a> at the University of Michigan. I work with <a href="http://www-personal.umich.edu/~wiensj/">Professor Jenna Wiens</a> on developing novel machine learning techniques to classify healthcare data. Part of my work is funded by a <a href="https://stemfellowships.org/">Graduate Fellowship for STEM Diversity</a>. <br> <br>I received my bachelor's degree from Caltech (major: <a href="http://ee.caltech.edu/">EE</a>, minor: <a href="http://cms.caltech.edu/">CS</a>). <br> <br> In the past, I have developed computational tools for multiple domains, including <a href="https://arxiv.org/abs/1903.07214">autonomous systems control</a>, <a href="https://www.sciencedirect.com/science/article/abs/pii/S0019103522004961">astronomy</a>, and <a href="https://eco.confex.com/eco/2015/webprogram/Paper56171.html">population studies</a>.
      </p>
 <p style= font-size:18px; line-height:35px; "> Here is my <a href="https://meerakulous.github.io/MeeraKrishnamoorthyCV.pdf">CV</a>. </p>
 <p>
