--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ div.column a:visited { text-decoration: underline; color: green }
 <p>
 <hr>
 <p style="font-size:22px;font-weight:900;">About Me</p>
-    <p style= font-size:18px; line-height:35px; "> I am a fifth year Ph.D. student in <a href="https://cse.umich.edu/">Computer Science</a> at the University of Michigan. My research focuses on developing model architectures, model components, and evaluation techniques to allow for accurate and efficient machine learning in healthcare. <br> <br> I am advised by <a href="http://www-personal.umich.edu/~wiensj/">Professor Jenna Wiens</a>. Part of my work is funded by a <a href="https://stemfellowships.org/">Graduate Fellowship for STEM Diversity</a>. <br> <br>I received my bachelor's degree from Caltech (major: <a href="http://ee.caltech.edu/">EE</a>, minor: <a href="http://cms.caltech.edu/">CS</a>). <br> <br> In the past, I have developed computational tools for multiple domains, including <a href="https://arxiv.org/abs/1903.07214">autonomous systems control</a>, <a href="https://www.sciencedirect.com/science/article/abs/pii/S0019103522004961">astronomy</a>, and <a href="https://eco.confex.com/eco/2015/webprogram/Paper56171.html">population studies</a>.
+    <p style= font-size:18px; line-height:35px; "> I am a sixth year Ph.D. student in <a href="https://cse.umich.edu/">Computer Science</a> at the University of Michigan. My research focuses on developing model architectures, model components, and evaluation techniques to allow for accurate and efficient machine learning in healthcare. <br> <br> I am advised by <a href="http://www-personal.umich.edu/~wiensj/">Professor Jenna Wiens</a>. Part of my work is funded by a <a href="https://stemfellowships.org/">Graduate Fellowship for STEM Diversity</a>. <br> <br>I received my bachelor's degree from Caltech (major: <a href="http://ee.caltech.edu/">EE</a>, minor: <a href="http://cms.caltech.edu/">CS</a>). <br> <br> In the past, I have developed computational tools for multiple domains, including <a href="https://arxiv.org/abs/1903.07214">autonomous systems control</a>, <a href="https://www.sciencedirect.com/science/article/abs/pii/S0019103522004961">astronomy</a>, and <a href="https://eco.confex.com/eco/2015/webprogram/Paper56171.html">population studies</a>.
      </p>
 <p style= font-size:18px; line-height:35px; "> Here is my <a href="https://meerakulous.github.io/MeeraKrishnamoorthyCV.pdf">CV</a>. </p>
 <p>
@@ -67,19 +67,18 @@ div.column a:visited { text-decoration: underline; color: green }
 	  
 <p style="font-size:22px;font-weight:900;">News</p>
 <ul>
-        <li> <b>April 4, 2024</b>: Our paper defining and developing methods for multiple instance learning with absolute position information was accepted to CHIL 2024. 
+        <li> <b>April 4, 2024</b>: Presented our work on multiple instance learning with absolute position information at CHIL 2024. 
 	<li> <b>March 22, 2024</b>: Our <a href="https://rdcu.be/dB7a4">comment</a> on the off-label use of AI models in healthcare was published in  <a href="https://www.nature.com/nm/"><i>Nature Medicine</i></a>.
-	<li> <b> February 2, 2023</b>: I was invited to present our work on AMAISE at the University of Michigan DCMB's <a href="https://medicine.umich.edu/dept/dcmb/events/tools-technology-seminar-series">Tools and Technology Seminar</a> (<a href="https://www.youtube.com/watch?v=tTelRbTbdb0">Video Link</a>) </li>
-        <li> <b>June 9, 2022</b>: Our <a href="https://doi.org/10.1038/s42003-022-03498-3">paper</a> presenting AMAISE (<b>A</b> <b>M</b>achine learning <b>A</b>pproach to <b>I</b>ndex-free <b>S</b>equence <b>E</b>nrichment) was published in <a href="https://www.nature.com/commsbio/"><i>Nature Communications Biology</i></a> (<a href="https://bioengineeringcommunity.nature.com/posts/the-story-behind-amaise-a-machine-learning-approach-to-index-free-sequence-enrichment">related blog post</a>, <a href="https://cse.engin.umich.edu/stories/precision-health-in-the-palm-of-your-hand">related article</a>).
 </ul>
 <p>
 <hr>
 
 <p style="font-size:22px;font-weight:900;">Publications</p>
 <ul>
+	<li> <b> Meera Krishnamoorthy</b>, Jenna Wiens. <br> <b> Cross-Validation for Longitudinal Datasets with Time-Varying Spurious Correlations</b> <br> Conference Paper, <i> Under Review</i></li><br>
+	<li> <b> Meera Krishnamoorthy</b>, Jenna Wiens. <br> <b> Multiple Instance Learning with Absolute Position Information</b> <br> Conference Paper, Conference on Health, Inference, and Learning (CHIL) (2024) <a href="https://proceedings.mlr.press/v248/krishnamoorthy24a.html"> <br> </bar>[Article]</a></li><br>
 	<li> <b> Meera Krishnamoorthy</b>, Michael W. Sjoding, Jenna Wiens. <br> <b> Off-label use of artificial intelligence models in healthcare</b> <br> Comment, Nature Medicine (2024) <a href="https://rdcu.be/dB7a4"> <br> </bar>[Article]</a></li><br>
-        <li> <b>Meera Krishnamoorthy</b>, Piyush Ranjan, John R. Erb-Downward, Robert P. Dickson, Jenna Wiens. <br> <b>AMAISE: a machine learning approach to index-free sequence enrichment</b> <br> Journal Paper, Nature Communications Biology <b>5</b>, 568 (2022) <br> <a href="https://doi.org/10.1038/s42003-022-03498-3">[Article]</a> <a href="https://www.nature.com/articles/s42003-022-03498-3.pdf">[PDF]</a> <a href="https://bioengineeringcommunity.nature.com/posts/the-story-behind-amaise-a-machine-learning-approach-to-index-free-sequence-enrichment">[Blog Post]</a></li> <br>
-        <li> Andrew J. Taylor, Victor D. Dorobantu, <b> Meera Krishnamoorthy </b>, Hoang M. Le, Yisong Yue, Aaron D. Ames. <br> <b> A Control Lyapunov Perspective on Episodic Learning via Projection to State Stability </b> <br> Conference Paper, IEEE Conference on Decision and Control (2019) <br> <a href="https://arxiv.org/abs/1903.07214">[PDF]</a></li>
+        <li> <b>Meera Krishnamoorthy</b>, Piyush Ranjan, John R. Erb-Downward, Robert P. Dickson, Jenna Wiens. <br> <b>AMAISE: a machine learning approach to index-free sequence enrichment</b> <br> Journal Paper, Nature Communications Biology <b>5</b>, 568 (2022) <br> <a href="https://doi.org/10.1038/s42003-022-03498-3">[Article]</a> <a href="https://www.nature.com/articles/s42003-022-03498-3.pdf">[PDF]</a> <a href="https://bioengineeringcommunity.nature.com/posts/the-story-behind-amaise-a-machine-learning-approach-to-index-free-sequence-enrichment">[Blog Post]</a> <a href="https://www.youtube.com/watch?v=tTelRbTbdb0">[Video Link]</a></li> <br>
         <br>
 </ul>
 <p>
