--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@ div.column a:visited { text-decoration: underline; color: green }
 <p>
 <hr>
 <p style="font-size:22px;font-weight:900;">About Me</p>
-    <p style= font-size:18px; line-height:35px; "> I am a sixth year Ph.D. student in <a href="https://cse.umich.edu/">Computer Science</a> at the University of Michigan. My research focuses on developing accurate machine learning models given resource constraints (i.e. <a href= "https://www.nature.com/articles/s42003-022-03498-3">memory</a> and <a href ="https://proceedings.mlr.press/v248/krishnamoorthy24a.html">time</a>) and unreliable data (i.e. with time-varying spurious correlations).
+    <p style= font-size:18px; line-height:35px; "> I am a final year Ph.D. candidate in <a href="https://cse.umich.edu/">Computer Science</a> at the University of Michigan, on track to graduate in June 2025. My research focuses on developing accurate machine learning models given computational resource constraints (i.e. <a href= "https://www.nature.com/articles/s42003-022-03498-3">memory</a> and <a href ="https://proceedings.mlr.press/v248/krishnamoorthy24a.html">time</a>) and dataset shift (due to unreliable correlations or selection bias).
 	    <br> <br> I am advised by <a href="http://www-personal.umich.edu/~wiensj/">Professor Jenna Wiens</a>. Part of my work is funded by a <a href="https://stemfellowships.org/">Graduate Fellowship for STEM Diversity</a>. <br> <br>I received my bachelor's degree from Caltech (major: <a href="http://ee.caltech.edu/">EE</a>, minor: <a href="http://cms.caltech.edu/">CS</a>). <br> <br> In the past, I have developed computational tools for multiple domains, including <a href="https://arxiv.org/abs/1903.07214">autonomous systems control</a>, <a href="https://www.sciencedirect.com/science/article/abs/pii/S0019103522004961">astronomy</a>, and <a href="https://eco.confex.com/eco/2015/webprogram/Paper56171.html">population studies</a>.
      </p>
 <p style= font-size:18px; line-height:35px; "> Here is my <a href="https://meerakulous.github.io/MeeraKrishnamoorthyCV.pdf">CV</a>. </p>
+
 <p>
 <hr>
 	  
@@ -76,7 +77,7 @@ div.column a:visited { text-decoration: underline; color: green }
 
 <p style="font-size:22px;font-weight:900;">Publications</p>
 <ul>
-	<li> <b> Meera Krishnamoorthy</b>, Jenna Wiens. <br> <b> Cross-Validation for Longitudinal Datasets with Time-Varying Spurious Correlations</b> <br> Conference Paper, <i> Under Review</i></li><br>
+	<li> <b> Meera Krishnamoorthy</b>, Michael Sjoding, Jenna Wiens. <br> <b> Cross-Validation for Longitudinal Datasets with Unreliable Correlations</b> <br> Conference Paper, <i> Under Review</i></li><br>
 	<li> <b> Meera Krishnamoorthy</b>, Jenna Wiens. <br> <b> Multiple Instance Learning with Absolute Position Information</b> <br> Conference Paper, Conference on Health, Inference, and Learning (CHIL) (2024) <a href="https://proceedings.mlr.press/v248/krishnamoorthy24a.html"> <br> </bar>[Article]</a></li><br>
 	<li> <b> Meera Krishnamoorthy</b>, Michael W. Sjoding, Jenna Wiens. <br> <b> Off-label use of artificial intelligence models in healthcare</b> <br> Comment, Nature Medicine (2024) <a href="https://rdcu.be/dB7a4"> <br> </bar>[Article]</a></li><br>
         <li> <b>Meera Krishnamoorthy</b>, Piyush Ranjan, John R. Erb-Downward, Robert P. Dickson, Jenna Wiens. <br> <b>AMAISE: a machine learning approach to index-free sequence enrichment</b> <br> Journal Paper, Nature Communications Biology <b>5</b>, 568 (2022) <br> <a href="https://doi.org/10.1038/s42003-022-03498-3">[Article]</a> <a href="https://www.nature.com/articles/s42003-022-03498-3.pdf">[PDF]</a> <a href="https://bioengineeringcommunity.nature.com/posts/the-story-behind-amaise-a-machine-learning-approach-to-index-free-sequence-enrichment">[Blog Post]</a> <a href="https://www.youtube.com/watch?v=tTelRbTbdb0">[Video Link]</a></li> <br>
