--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ div.column a:visited { text-decoration: underline; color: green }
 <p>
 <hr>
 <p style="font-size:22px;font-weight:900;">About Me</p>
-    <p style= font-size:18px; line-height:35px; "> I am a final year Ph.D. candidate in <a href="https://cse.umich.edu/">Computer Science</a> at the University of Michigan, on track to graduate in June 2025. My research focuses on developing accurate machine learning models given computational resource constraints (i.e. <a href= "https://www.nature.com/articles/s42003-022-03498-3">memory</a> and <a href ="https://proceedings.mlr.press/v248/krishnamoorthy24a.html">time</a>) and dataset shift (due to unreliable correlations or selection bias).
+    <p style= font-size:18px; line-height:35px; "> I am a final year Ph.D. candidate in <a href="https://cse.umich.edu/">Computer Science</a> at the University of Michigan, on track to graduate in June 2025. My research focuses on developing accurate machine learning models given computational resource constraints (<i>e.g.,</i> limited <a href= "https://www.nature.com/articles/s42003-022-03498-3">memory</a> and <a href ="https://proceedings.mlr.press/v248/krishnamoorthy24a.html">time</a>) and dataset shift (due to unreliable correlations or selection bias).
 	    <br> <br> I am advised by <a href="http://www-personal.umich.edu/~wiensj/">Professor Jenna Wiens</a>. Part of my work is funded by a <a href="https://stemfellowships.org/">Graduate Fellowship for STEM Diversity</a>. <br> <br>I received my bachelor's degree from Caltech (major: <a href="http://ee.caltech.edu/">EE</a>, minor: <a href="http://cms.caltech.edu/">CS</a>). <br> <br> In the past, I have developed computational tools for multiple domains, including <a href="https://arxiv.org/abs/1903.07214">autonomous systems control</a>, <a href="https://www.sciencedirect.com/science/article/abs/pii/S0019103522004961">astronomy</a>, and <a href="https://eco.confex.com/eco/2015/webprogram/Paper56171.html">population studies</a>.
      </p>
 <p style= font-size:18px; line-height:35px; "> Here is my <a href="https://meerakulous.github.io/MeeraKrishnamoorthyCV.pdf">CV</a>. </p>
@@ -69,8 +69,8 @@ div.column a:visited { text-decoration: underline; color: green }
 	  
 <p style="font-size:22px;font-weight:900;">News</p>
 <ul>
-        <li> <b>June 27, 2024</b>: Presented our work on <a href="https://proceedings.mlr.press/v248/krishnamoorthy24a.html"> multiple instance learning with absolute position information </a> at CHIL 2024. 
-	<li> <b>March 22, 2024</b>: Our <a href="https://rdcu.be/dB7a4">comment</a> on the off-label use of AI models in healthcare was published in  <a href="https://www.nature.com/nm/"><i>Nature Medicine</i></a>.
+<li> <b>June 27, 2024</b>: Presented our work on <a href="https://proceedings.mlr.press/v248/krishnamoorthy24a.html"> multiple instance learning with absolute position information </a> at CHIL 2024. 
+<li> <b>March 22, 2024</b>: Our <a href="https://rdcu.be/dB7a4">comment</a> on the off-label use of AI models in healthcare was published in  <a href="https://www.nature.com/nm/"><i>Nature Medicine</i></a>.
 </ul>
 <p>
 <hr>
