--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ div.column a:visited { text-decoration: underline; color: green }
 
 <p style="font-size:22px;font-weight:900;">Publications</p>
 <ul>
-	<li> <b> Meera Krishnamoorthy</b>, Michael Sjoding, Jenna Wiens. <br> <b> Cross-Validation for Longitudinal Datasets with Unreliable Correlations</b> <br> Conference Paper, <i> Under Review</i></li><br>
+	<li> <b> Meera Krishnamoorthy</b>, Michael Sjoding, Jenna Wiens. <br> <b> Cross-Validation for Longitudinal Datasets with Unstable Correlations</b> <br> Conference Paper, <i> Under Review</i></li><br>
 	<li> <b> Meera Krishnamoorthy</b>, Jenna Wiens. <br> <b> Multiple Instance Learning with Absolute Position Information</b> <br> Conference Paper, Conference on Health, Inference, and Learning (CHIL) (2024) <a href="https://proceedings.mlr.press/v248/krishnamoorthy24a.html"> <br> </bar>[Article]</a></li><br>
 	<li> <b> Meera Krishnamoorthy</b>, Michael W. Sjoding, Jenna Wiens. <br> <b> Off-label use of artificial intelligence models in healthcare</b> <br> Comment, Nature Medicine (2024) <a href="https://rdcu.be/dB7a4"> <br> </bar>[Article]</a></li><br>
         <li> <b>Meera Krishnamoorthy</b>, Piyush Ranjan, John R. Erb-Downward, Robert P. Dickson, Jenna Wiens. <br> <b>AMAISE: a machine learning approach to index-free sequence enrichment</b> <br> Journal Paper, Nature Communications Biology <b>5</b>, 568 (2022) <br> <a href="https://doi.org/10.1038/s42003-022-03498-3">[Article]</a> <a href="https://www.nature.com/articles/s42003-022-03498-3.pdf">[PDF]</a> <a href="https://bioengineeringcommunity.nature.com/posts/the-story-behind-amaise-a-machine-learning-approach-to-index-free-sequence-enrichment">[Blog Post]</a> <a href="https://www.youtube.com/watch?v=tTelRbTbdb0">[Video Link]</a></li> <br>
